the queue-selector-container is no longer scrollable, and queue-song-list is now scrollable instead. this is so the 'queue' header is always visible

--- a/styles/player.css
+++ b/styles/player.css
@@ -1,5 +1,8 @@
 * {
     box-sizing: border-box;
+    selection {
+        background-color: var(--primary-albumart-color);
+    }
 }
 
 html {
